force-app/main/default/objects/Bypassed_Automation__mdt/Bypassed_Automation__mdt.object-meta.xml
<CustomObject>
    <label>Bypassed Automation</label>
    <pluralLabel>Bypassed Automations</pluralLabel>
</CustomObject>