force-app/main/default/objects/Bypassed_Automation__mdt/fields/Bypass_Workflow_Rule__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Workflow_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Workflow Rule?</label>
    <type>Checkbox</type>
</CustomField>